implemented import.html
addresses issue #5

--- a/Server/res/import.html
+++ b/Server/res/import.html
@@ -1,4 +1,6 @@
 <html>
-
-
+<h1>Import Your CSV File</h1>
+<form action="/action_page.php">
+    <input type="file" name="pic" accept="text/csv/*">
+</form>
 </html>
